--- a/cms/src/components/FormGlobal/index.scss
+++ b/cms/src/components/FormGlobal/index.scss
@@ -20,7 +20,7 @@
 
 .select-formik-global {
   width: 100%;
-  height: 40px;
+  min-height: 40px;
 
   .ant-select-selector {
     height: 100% !important;
