--- a/cms/src/layouts/index.scss
+++ b/cms/src/layouts/index.scss
@@ -1,12 +1,20 @@
 .wrapper {
-  display: flex;
-  width: 100%;
-  min-height: 100%;
-  background-color: #f0f2f5;
+  height: 100%;
 
-  a {
-    &:hover {
-      color: unset;
+  .dashboard-layout {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: #f0f2f5;
+
+    a {
+      &:hover {
+        color: unset;
+      }
     }
+  }
+
+  .landing-layout {
+    height: 100%;
   }
 }
