--- a/cms/src/components/FormGlobal/index.scss
+++ b/cms/src/components/FormGlobal/index.scss
@@ -23,7 +23,7 @@
   min-height: 40px;
 
   .ant-select-selector {
-    height: 100% !important;
+    height: 40px !important;
     line-height: 40px;
     align-items: center;
   }
