--- a/booking-room/src/pages/Home/index.scss
+++ b/booking-room/src/pages/Home/index.scss
@@ -4,6 +4,8 @@
     justify-content: center;
 
     .ant-carousel {
+      display: flex;
+      justify-content: center;
       max-width: 1000px;
     }
 
